added new models and controllers

--- a/Next/Views/Shared/_Layout.cshtml
+++ b/Next/Views/Shared/_Layout.cshtml
@@ -35,9 +35,14 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Servers" asp-action="Index">My servers</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Servers" asp-action="Index">Servers</a>
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DataCenters" asp-action="Index">Data Centers</a>
+                        </li>
                     </ul>
                 </div>
             </div>
