--- a/Next/Views/Users/Create.cshtml
+++ b/Next/Views/Users/Create.cshtml
@@ -1,4 +1,4 @@
-@model Next.Models.User
+﻿@model Next.Models.User
 
 @{
     ViewData["Title"] = "Create";
@@ -12,6 +12,23 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Username" class="control-label"></label>
+                <input asp-for="Username" class="form-control" />
+                <span asp-validation-for="Username" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <div class="checkbox">
+                    <label>
+                        <input asp-for="isAdmin" /> @Html.DisplayNameFor(model => model.isAdmin)
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
+                <label asp-for="Country" class="control-label"></label>
+                <input asp-for="Country" class="form-control"  />
+                <span asp-validation-for="Country" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
