--- a/Next/Views/Users/Delete.cshtml
+++ b/Next/Views/Users/Delete.cshtml
@@ -1,4 +1,4 @@
-@model Next.Models.User
+﻿@model Next.Models.User
 
 @{
     ViewData["Title"] = "Delete";
@@ -11,6 +11,24 @@
     <h4>User</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Username)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Username)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.isAdmin)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.isAdmin)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Country)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Country)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
