--- a/Next/Views/Servers/Edit.cshtml
+++ b/Next/Views/Servers/Edit.cshtml
@@ -14,9 +14,29 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
             <div class="form-group">
+                <label asp-for="CPU" class="control-label"></label>
+                <input asp-for="CPU" class="form-control" />
+                <span asp-validation-for="CPU" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="RAM" class="control-label"></label>
+                <input asp-for="RAM" class="form-control" />
+                <span asp-validation-for="RAM" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="UserID" class="control-label"></label>
                 <select asp-for="UserID" class="form-control" asp-items="ViewBag.UserID"></select>
                 <span asp-validation-for="UserID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="OS" class="control-label"></label>
+                <input asp-for="OS" class="form-control" />
+                <span asp-validation-for="OS" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DataCenterID" class="control-label"></label>
+                <select asp-for="DataCenterID" class="form-control" asp-items="ViewBag.DataCenterID"></select>
+                <span asp-validation-for="DataCenterID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
