--- a/Next/Views/Servers/Delete.cshtml
+++ b/Next/Views/Servers/Delete.cshtml
@@ -12,10 +12,34 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.CPU)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CPU)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.RAM)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.RAM)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.OS)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.OS)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.User)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.User.ID)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.DataCenter)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.DataCenter.ID)
         </dd>
     </dl>
     
