--- a/Next/Views/Servers/Index.cshtml
+++ b/Next/Views/Servers/Index.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.User.ID)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DataCenter.ID)
+                @Html.DisplayFor(modelItem => item.DataCenter.Name)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
