--- a/Next/Views/Servers/Create.cshtml
+++ b/Next/Views/Servers/Create.cshtml
@@ -31,7 +31,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="OS" class="control-label"></label>
-                <input asp-for="OS" class="form-control" />
+                <input asp-for="OS" class="form-control" required />
                 <span asp-validation-for="OS" class="text-danger"></span>
             </div>
             <div class="form-group">
