--- a/Next/Views/Servers/Delete.cshtml
+++ b/Next/Views/Servers/Delete.cshtml
@@ -33,7 +33,7 @@
             @Html.DisplayNameFor(model => model.User)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.User.ID)
+            @Html.DisplayFor(model => model.User.Id)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.DataCenter)
