--- a/Next/Views/Shared/_Layout.cshtml
+++ b/Next/Views/Shared/_Layout.cshtml
@@ -44,6 +44,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="DataCenters" asp-action="Index">Data Centers</a>
                         </li>
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
