--- a/Next/Views/Home/Index.cshtml
+++ b/Next/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="item">
-            <img src="~/images/pic-99.jpg" alt="Visual Studio" class="img-responsive"  style="wheight:360px" />
+            <img src="~/images/pic-99.jpg" alt="Visual Studio" class="img-responsive" style="wheight:360px" />
             <div class="carousel-caption" role="option">
                 <p>
                     There are powerful new features in Visual Studio for building modern web apps.
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="item">
-            <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive"/>
+            <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
                     Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
@@ -51,6 +51,24 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
+
 </div>
+
+
+@if((bool)ViewData["isAdmin"] == true){
+
+<div>
+    <h2> Hello administrator!</h2>
+    <ul>
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Manage application Users</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="DataCenters" asp-action="Index">Manage the Data Centers</a>
+        </li>
+    </ul>
+</div>
+
+}
 
 <video> src</video>
