--- a/Next/Views/Home/About.cshtml
+++ b/Next/Views/Home/About.cshtml
@@ -1,7 +1,16 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+<body>
+    <h1 id="header">Our Company</h1>
+    <div id="tran"></div>
+    <h1>   </h1>
+    <div id="mul">
+        Our company was ment to provide with an easy way to buy servers online. All you to do is choose resurces and pay!
 
-<p>Use this area to provide additional information.</p>
+        We currnently have 5 data centers across the world- In Tel-Aviv, Malaga, New York, Singapore and Moscow.
+
+
+        You are welcome to try our services! We'll aprecciate if you add feedback so we can improve our services for you!
+    </div>
+</body>
