--- a/Next/wwwroot/css/site.css
+++ b/Next/wwwroot/css/site.css
@@ -1,6 +1,50 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
-for details on configuring this project to bundle and minify static web assets. */
+﻿@font-face {
+    font-family: 'Merriweather Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: local('Merriweather Sans'), local('MerriweatherSans-Regular'), url(https://fonts.gstatic.com/s/merriweathersans/v11/2-c99IRs1JiJN1FRAMjTN5zd9vgsFHX1QjU.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/quicksand/v13/6xK-dSZaM9iE8KbpRA_LJ3z8mH9BOJvgkP8o58a-wg.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+#header {
+    font-family: Merriweather Sans;
+    font-size: 50px;
+    text-shadow: 2px 2px gray;
+}
+
+#tran {
+    width: 330px; /*340*/
+    height: 10px; /*340*/
+    border-radius: 10px 10px 10px 10px;
+    background: gray /*url("~/images/DC.jpg")*/;
+    transition: width 2s;
+}
+
+    #tran:hover {
+        width: 400px; /*895*/
+    }
+
+#mul {
+    white-space: pre-line;
+    column-count: 3;
+    column-gap: 40px;
+    column-rule: 1px solid lightblue;
+    font-family: Quicksand;
+    font-size: 20px;
+}
+
 body {
+    font-family: Quicksand;
     padding-top: 50px;
     padding-bottom: 20px;
 }
