--- a/Next/Views/Servers/Create.cshtml
+++ b/Next/Views/Servers/Create.cshtml
@@ -32,7 +32,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="DataCenterID" class="control-label"></label>
-                <select asp-for="DataCenterID" class="form-control" asp-items="ViewBag.DataCenterID"></select>
+                <select asp-for="DataCenterID" class="form-control" asp-items="ViewBag.DCName"></select>
             </div>
             <div>
                 <label class="control-label">Price</label>
