--- a/Next/Views/Servers/Edit.cshtml
+++ b/Next/Views/Servers/Edit.cshtml
@@ -23,7 +23,7 @@
                 <input asp-for="RAM" class="form-control" />
                 <span asp-validation-for="RAM" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" hidden>
                 <label asp-for="UserID" class="control-label"></label>
                 <select asp-for="UserID" class="form-control" asp-items="ViewBag.UserID"></select>
                 <span asp-validation-for="UserID" class="text-danger"></span>
