--- a/Next/Views/Home/Index.cshtml
+++ b/Next/Views/Home/Index.cshtml
@@ -54,21 +54,29 @@
 
 </div>
 
+<div id="tweetArea">
 
-@if((bool)ViewData["isAdmin"] == true){
-
-<div>
-    <h2> Hello administrator!</h2>
-    <ul>
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Manage application Users</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="DataCenters" asp-action="Index">Manage the Data Centers</a>
-        </li>
-    </ul>
 </div>
+
+@if ((bool)ViewData["isAdmin"] == true)
+{
+
+    <div>
+        <h2> Hello administrator!</h2>
+        <ul>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Manage application Users</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="DataCenters" asp-action="Index">Manage the Data Centers</a>
+            </li>
+        </ul>
+    </div>
 
 }
 
 <video> src</video>
+
+@section Scripts {
+    <script src="~/js/tweetsIntegration.js"></script>
+}
