--- a/Next/Views/Servers/Details.cshtml
+++ b/Next/Views/Servers/Details.cshtml
@@ -45,11 +45,13 @@
         </dd>
     </dl>
 </div>
-<div>
+<div class="server-details-container">
+    <div class="graphs">
+        <div id="performanceGraph"></div>
+    </div>
     <div style="text-align: center;">
         <h4>Server Physcal Location:</h4>
         <div id="map" style="width:800px; height:500px ; margin: auto;"></div>
-
     </div>
 </div>
 <div>
@@ -58,7 +60,9 @@
 </div>
 
 @section Scripts {
-    <script src="~/js/orderServer.js"></script>
     <script src="~/js/serverMap.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBqmpZ2NjXkBBJA91a2Jp3cDjMPLRk7UgA&callback=Init"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="~/js/serverPerformance.js"></script>
+
 }
