--- a/Next/Views/Servers/Index.cshtml
+++ b/Next/Views/Servers/Index.cshtml
@@ -66,7 +66,7 @@
                         @Html.DisplayFor(modelItem => item.OS)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.User.Id)
+                        @Html.DisplayFor(modelItem => item.User.UserName)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.DataCenter.Name)
