--- a/Next/Views/Home/About.cshtml
+++ b/Next/Views/Home/About.cshtml
@@ -13,4 +13,13 @@
 
         You are welcome to try our services! We'll aprecciate if you add feedback so we can improve our services for you!
     </div>
+    <br />
+    <br />
+
+    <div id="video" text-align="center">
+        <video width="400" height="300" controls style="display:block; margin: 0 auto;" autoplay>
+            <source src="https://tinyurl.com/y3aweenp" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
 </body>
