video + users layout ready for filters

--- a/Next/Views/Home/About.cshtml
+++ b/Next/Views/Home/About.cshtml
@@ -18,7 +18,7 @@
 
     <div id="video" text-align="center">
         <video width="400" height="300" controls style="display:block; margin: 0 auto;" autoplay>
-            <source src="https://tinyurl.com/y3aweenp" type="video/mp4">
+            <source src="~/videos/DCVideo.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
