added the systems BI

--- a/Next/Views/Home/Index.cshtml
+++ b/Next/Views/Home/Index.cshtml
@@ -16,6 +16,9 @@
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="DataCenters" asp-action="Index">Manage the Data Centers</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="AdminStatistics" asp-action="Index">View the system statistics</a>
+            </li>
         </ul>
     </div>
 
