--- a/Next/Views/Servers/Details.cshtml
+++ b/Next/Views/Servers/Details.cshtml
@@ -45,10 +45,7 @@
         </dd>
     </dl>
 </div>
-<div class="server-details-container">
-    <div class="graphs">
-        <div id="performanceGraph"></div>
-    </div>
+<div>
     <div style="text-align: center;">
         <h4>Server Physcal Location:</h4>
         <div id="map" style="width:800px; height:500px ; margin: auto;"></div>
@@ -63,6 +60,4 @@
     <script src="~/js/serverMap.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBqmpZ2NjXkBBJA91a2Jp3cDjMPLRk7UgA&callback=Init"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="~/js/serverPerformance.js"></script>
-
 }
