--- a/Next/Views/Servers/Index.cshtml
+++ b/Next/Views/Servers/Index.cshtml
@@ -7,8 +7,8 @@
 <h1 id="header">Servers</h1>
 <div id="tran"></div>
 
-<p>
-    <a asp-action="Create">Create New</a>
+<p style="margin-top:30px">
+    <a asp-action="Create" class="startorder">Order a new Server!</a>
 </p>
 <div align="center">
     <form asp-action="Index" method="get">
