--- a/Next/Views/Servers/Create.cshtml
+++ b/Next/Views/Servers/Create.cshtml
@@ -8,7 +8,7 @@
 
 <h4>Server</h4>
 
-<h5>@ViewData["LinuxGuide"]></h5>
+<h5>@ViewData["LinuxGuide"]</h5>
 <a> @ViewData["linuxLink"] </a>
 <hr />
 <div class="row">
