--- a/Next/Views/Shared/_NotLoggedIn.cshtml
+++ b/Next/Views/Shared/_NotLoggedIn.cshtml
@@ -1,4 +1,4 @@
 ﻿
-<div>
-    This action requires you to be logged in.
+<div style="font-size: 29pt;padding: 100px;">
+    This action requires you to be logged in :( 
 </div>
