--- a/Next/Views/DataCenters/Index.cshtml
+++ b/Next/Views/DataCenters/Index.cshtml
@@ -6,8 +6,10 @@
 
 <h1 id="header">Data Centers</h1>
 <div id="tran"></div>
-<p>
-    <a asp-action="Create">Create New</a>
+
+
+<p style="margin-top:30px">
+    <a asp-action="Create" class="startorder">Create new DC</a>
 </p>
 
 <div align="center">
