--- a/Next/wwwroot/css/site.css
+++ b/Next/wwwroot/css/site.css
@@ -116,3 +116,24 @@ body {
         font-weight: bold;
         font-size: 16px; 
     }
+
+    .adminoption {
+        padding: 10px;
+        box-shadow: 0 0 1px black;
+        cursor: pointer;
+        text-decoration: none !important;
+        transition: 0.5s all;
+        color: black !important;
+        list-style-type: none;
+    }
+
+        .adminoption:hover {
+            color: white !important;
+            background: #6E97EB;
+            font-weight: bold;
+            font-size: 16px;
+        }
+
+ul {
+    list-style-type: none;
+}
