--- a/Next/Views/Home/Index.cshtml
+++ b/Next/Views/Home/Index.cshtml
@@ -7,19 +7,23 @@
 @if ((bool)ViewData["isAdmin"] == true)
 {
 
-    <div>
-        <h2> Hello administrator!</h2>
-        <ul>
-            <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Manage application Users</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="DataCenters" asp-action="Index">Manage the Data Centers</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="AdminStatistics" asp-action="Index">View the system statistics</a>
-            </li>
-        </ul>
+<div>
+    <h2> Hello administrator!</h2>
+    <br />
+
+    <table style="width:60%">
+        <tr>
+            <td>
+                <a class="adminoption" class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Manage application Users</a>
+            </td>
+            <td>
+                <a class="adminoption" class="nav-link text-dark" asp-area="" asp-controller="DataCenters" asp-action="Index">Manage the Data Centers</a>
+            </td>
+            <td>
+                <a class="adminoption" class="nav-link text-dark" asp-area="" asp-controller="AdminStatistics" asp-action="Index">View the system statistics</a>
+            </td>
+        </tr>
+    </table>
     </div>
 
 }
