--- a/Next/Views/Servers/Index.cshtml
+++ b/Next/Views/Servers/Index.cshtml
@@ -8,7 +8,7 @@
 <div id="tran"></div>
 
 <p style="margin-top:30px">
-    <a asp-action="Create" class="startorder">Order a new Server!</a>
+    <a asp-action="Create" class="startorder">Order a new Server</a>
 </p>
 <div align="center">
     <form asp-action="Index" method="get">
