--- a/Next/Views/Home/Index.cshtml
+++ b/Next/Views/Home/Index.cshtml
@@ -36,35 +36,26 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
+            <img src="~/images/secondpicture.jpg" alt="ASP.NET" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
+                    Start Building on Next Today!
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="~/images/pic-99.jpg" alt="Visual Studio" class="img-responsive" style="wheight:360px" />
+            <img src="~/images/picture3.jpg" alt="Visual Studio" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
+                    Explore Our Products
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
+            <img src="~/images/firstimage.jpg" alt="Microsoft Azure" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
+                    Powering Customer Innovation
                 </p>
             </div>
         </div>
@@ -81,27 +72,13 @@
 </div>
 
 <div>
+    <img id="twitter" src="~/images/twitter.png" hidden />
     <p align="center">
-<<<<<<< HEAD
         <canvas id="tweeterlogo" width="128" height="128" style="border:1px solid #d3d3d3"></canvas>
     </p>
-   
-=======
-        <img id="twitter" src="~/images/twitter.png"  hidden/>
-        <canvas id="myCanvas" width="128" height="128" style="border:1px solid #d3d3d3;"></canvas>
-    </p>
 
-    <script>
-        window.onload = function () {
-            var c = document.getElementById("myCanvas");
-            var ctx = c.getContext("2d");
-            var img = document.getElementById("twitter");
-            ctx.drawImage(img, 0, 0);
-        };
-    </script>
->>>>>>> 131c38593625dd01cde0a3456b2a652962c6b94c
 </div>
-
+<h4 style="text-align:center;">Linux related Tweets:</h4>
 <aside id="tweetArea"></aside>
 @section Scripts {
     <script src="~/js/tweetsIntegration.js"></script>
