--- a/Next/Views/Servers/Details.cshtml
+++ b/Next/Views/Servers/Details.cshtml
@@ -32,7 +32,7 @@
             @Html.DisplayNameFor(model => model.User)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.User.Id)
+            @Html.DisplayFor(model => model.User.UserName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.DataCenter)
