--- a/Next/wwwroot/css/tweets.css
+++ b/Next/wwwroot/css/tweets.css
@@ -9,3 +9,21 @@
 #tweeterlogo{
     transition: 0.5s all;
 }
+
+.profileimg {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: white;
+    border-width: 10px;
+    box-shadow: 0 0 3px black;
+}
+
+.tweetusername{
+    margin-left: 10px
+}
+
+.tweetuserarea{
+    display: flex;
+    margin-bottom: 10px;
+}
